hw3/decafexpr/output/dev/llvm/boolcallcalleeexpr.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: /home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/boolcallcalleeexpr.llvm:7:21: error: use of undefined value '%a'
  %1 = load i1, i1* %a
                    ^
